# AlgoBot

./: .gitignore  2025-12-04.db  2025-12-05.db  CMakeLists copy.txt  CMakeLists.txt  Readme.md  bought.db  bought1.db  build copy.sh  build.sh  decrypt.sh  encrypt.sh  querydb.sh  querydb1.sh  sif.sh  sif_v1.sh
Interfaces/: BInterface  Binterface  bought.db  boughtdb.cpp  buildInt.sh  interface.cpp  stocksdb.cpp
Interfaces/include/: boughtdb.h  stocksdb.h
Order/: CookieDetails.cpp  ExecutedOrdersReq.cpp  KAddAlert.cpp  KAlerts.cpp  KDelAlerts.cpp  KHoldings.cpp  KHomePage.cpp  KHttpClient.cpp  KLoginPage.cpp  KPinRequest.cpp  KiteDocument.cpp  KiteHomeRedirect.cpp  OrdersReq.cpp  StringSupport.cpp  boughtdbc.cpp  buildOrder.sh  logoutPage.cpp  order.cpp
Order/include/: CookieDetails.h  ExecutedOrdersReq.h  KAddAlert.h  KAlerts.h  KDelAlerts.h  KHoldings.h  KHomePage.h  KHttpClient.h  KLoginPage.h  KPinRequest.h  KiteDocument.h  KiteHomeRedirect.h  OrdersReq.h  StringSupport.h  boughtdbc.h  logoutPage.h
SellInterface/: SellInterface  StockYearWiseData.cpp  boughtdb.cpp  boughtdbc.cpp  sellinterface.cpp
SellInterface/include/: boughtdb.h  (+1 more)
build_backup/: AlgoBot  CMakeCache.txt  Interfaces  Makefile  SellInterface  Stocks  cmake_install.cmake
core/: HttpClient.cpp  JsonParser.cpp  RequestTask.cpp  StringCleaner.cpp  sqlitedb.cpp
engine/: IndexLists.cpp  StockLists.cpp  StockMetaData.cpp  StockQuoteData.cpp  StockYearWiseData.cpp  buildengine.sh  stocks  stocks.cpp  stocksdb.cpp
sellgtt/: BInterface  SellGTT  boughtdbc.cpp  main.cpp
src/: main.cpp
(+13 files in other folders)
